Bug 406659 - icon of the button to check for updates is not centered in mobile mode
Summary: icon of the button to check for updates is not centered in mobile mode
Status: RESOLVED FIXED
Alias: None
Product: Discover
Classification: Applications
Component: discover (other bugs)
Version First Reported In: unspecified
Platform: Neon Linux
: NOR normal
Target Milestone: ---
Assignee: Dan Leinir Turthra Jensen
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-04-18 17:12 UTC by Patrick Silva
Modified: 2019-04-25 18:55 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.16.0
Sentry Crash Report:


Attachments
screenshot (3.01 MB, image/png)
2019-04-18 17:12 UTC, Patrick Silva
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2019-04-18 17:12:21 UTC
Created attachment 119489 [details]
screenshot

SUMMARY
Open the attached screenshot and observe the button to check for updates on botton.
Its icon is not centered.


EXPECTED RESULT
icon of the button to check for updates is centered

SOFTWARE/OS VERSIONS
Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.15.80
KDE Frameworks Version: 5.58.0
Qt Version: 5.12.0
Comment 1 Aleix Pol 2019-04-23 14:49:27 UTC
Git commit 817101c32a9a36b6bb7ee31dfe784dd5e05a7078 by Aleix Pol.
Committed on 23/04/2019 at 14:29.
Pushed by apol into branch 'master'.

Improve dealing with updates

Deal with actions using states.
Properly use the "progressing" state, which was eclipsed by "has-updates"

M  +11   -10   discover/qml/UpdatesPage.qml
M  +1    -0    libdiscover/appstream/OdrsReviewsBackend.cpp

https://commits.kde.org/discover/817101c32a9a36b6bb7ee31dfe784dd5e05a7078