Improve dealing with updates

Deal with actions using states.
Properly use the "progressing" state, which was eclipsed by "has-updates"

BUG: 406659